<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.datadoghq</groupId>
    <artifactId>datadog-kafka-connect-logs</artifactId>
    <packaging>jar</packaging>
    <organization>
        <name>Datadog</name>
        <url>https://www.datadoghq.com/</url>
    </organization>
    <name>datadog-kafka-connect-logs</name>
    <version>1.1.2</version>
    <description>A Kafka Connect Connector that sends Kafka Connect records as logs to the Datadog API.</description>
    <url>https://github.com/DataDog/datadog-kafka-connect-logs</url>

    <developers>
        <developer>
            <id>datadog</id>
            <name>Datadog developers</name>
            <email>dev@datadoghq.com</email>
        </developer>
    </developers>

    <licenses>
        <license>
            <name>Apache License 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <scm>
        <url>https://github.com/DataDog/datadog-kafka-connect-logs</url>
        <connection>scm:git:git://github.com/DataDog/datadog-kafka-connect-logs.git</connection>
        <developerConnection>scm:git:git@github.com:Datadog/datadog-kafka-connect-logs.git</developerConnection>
        <tag>HEAD</tag>
    </scm>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <easymock.version>4.2</easymock.version>
        <bintray.repo>datadog/datadog-maven</bintray.repo>
        <bintray.package>datadog-kafka-connect-logs</bintray.package>
        <jetty.version>9.4.41.v20210516</jetty.version>
        <junit.version>4.13.1</junit.version>
        <java.version>1.8</java.version>
        <gson.version>2.8.9</gson.version>
        <slf4j.version>1.7.32</slf4j.version>

        <kafka-connect-maven-plugin.version>0.11.3</kafka-connect-maven-plugin.version>
        <kafka.version>2.5.0</kafka.version>

        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
        <maven-shade-plugin.version>3.2.4</maven-shade-plugin.version>
        <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>${gson.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.kafka</groupId>
            <artifactId>connect-api</artifactId>
            <version>${kafka.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.kafka</groupId>
            <artifactId>connect-json</artifactId>
            <version>${kafka.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>${slf4j.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.easymock</groupId>
            <artifactId>easymock</artifactId>
            <version>${easymock.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.eclipse.jetty</groupId>
            <artifactId>jetty-server</artifactId>
            <version>${jetty.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.eclipse.jetty</groupId>
            <artifactId>jetty-servlet</artifactId>
            <version>${jetty.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
      </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <inherited>true</inherited>
                <configuration>
                    <compilerArgs>
                        <arg>-Xlint:all</arg>
                    </compilerArgs>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>${maven-shade-plugin.version}</version>
                <configuration>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <artifactSet>
                                <excludes>
                                    <exclude>org.apache.kafka:connect-api</exclude>
                                </excludes>
                            </artifactSet>
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>io.confluent</groupId>
                <artifactId>kafka-connect-maven-plugin</artifactId>
                <version>${kafka-connect-maven-plugin.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>kafka-connect</goal>
                        </goals>
                        <configuration>
                            <title>Datadog Kafka Connect Logs</title>
                            <name>kafka-connect-logs</name>
                            <version>${project.version}</version>
                            <documentationUrl>https://github.com/DataDog/datadog-kafka-connect-logs</documentationUrl>
                            <description>
                                A Kafka Connect Connector that sends Kafka Connect records as logs to the Datadog API.
                            </description>
                            <logo>logos/datadog.png</logo>

                            <supportProviderName>Datadog</supportProviderName>
                            <supportSummary>
                                Support in Github issues is provided as best effort. Support for Datadog users is
                                given through Datadog's regular support channels.
                            </supportSummary>
                            <supportUrl>https://github.com/DataDog/datadog-kafka-connect-logs/issues</supportUrl>
                            <supportLogo>logos/datadog.png</supportLogo>

                            <sourceUrl>https://github.com/DataDog/datadog-kafka-connect-logs</sourceUrl>

                            <ownerUsername>datadog</ownerUsername>
                            <ownerType>organization</ownerType>
                            <ownerName>Datadog</ownerName>
                            <ownerUrl>https://www.datadoghq.com/</ownerUrl>
                            <ownerLogo>logos/datadog.png</ownerLogo>

                            <componentTypes>
                                <componentType>sink</componentType>
                            </componentTypes>

                            <tags>
                                <tag>http</tag>
                                <tag>rest</tag>
                                <tag>datadog</tag>
                            </tags>

                            <confluentControlCenterIntegration>true</confluentControlCenterIntegration>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

    <profiles>
      <profile>
        <id>old_jdk</id>
        <activation>
          <jdk>[,1.17)</jdk>
        </activation>
        <build>
          <plugins>
            <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-surefire-plugin</artifactId>
              <version>${maven-surefire-plugin.version}</version>
            </plugin>
          </plugins>
        </build>
      </profile>
      <profile>
        <id>new_jdk</id>
        <activation>
          <jdk>[1.17,]</jdk>
        </activation>
        <build>
          <plugins>
            <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-surefire-plugin</artifactId>
              <version>${maven-surefire-plugin.version}</version>
              <configuration>
                <argLine>
                  --add-opens=java.base/java.lang=ALL-UNNAMED
                </argLine>
              </configuration>
            </plugin>
          </plugins>
        </build>
      </profile>
    </profiles>
</project>
